<resources>
    <string name="app_name">Gotong Royong</string>
    <string name="app_website">gotongroyong.in</string>
    <string name="app_email">admin@gotongroyong.in</string>
    <string name="app_phone">+62 852&#8211;2370&#8211;8290</string>
    <string name="app_phone_plain">6285223708290</string>

    <string name="facebook_app_id">502859973522287</string>
    <string name="fb_login_protocol_scheme">fb502859973522287</string>

    <string name="load_retrieve">Retrieving data&#8230;</string>
    <string name="load_nothing">No data left!</string>
    <string name="load_number">0</string>
    <string name="error_connection">Connection problem</string>

    <string name="splash_subtitle">Platform Donasi Uang Tanpa Uang!</string>

    <string name="password_placeholder">************</string>

    <string name="nav_title">Menu</string>
    <string name="nav_campaign">Daftar Campaign</string>
    <string name="nav_profile">Profil Saya</string>
    <string name="nav_about">Tentang GotongRoyong</string>
    <string name="nav_logout">Logout</string>

    <string name="drawer_hello">Halo, Pahlawan!</string>

    <string name="toolbar_campaign">List of Campaign</string>
    <string name="toolbar_profile">Profil Saya</string>

    <string name="register_hello">Yuk, daftar \nmenjadi Pahlawan!</string>
    <string name="login_subtitle">Silahkan login untuk membantu sesama.</string>
    <string name="register_subtitle">Silahkan registrasi untuk membantu sesama.</string>
    <string name="register_fullname">Full Name</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_btn_register">Register</string>
    <string name="login_btn_login">Login</string>
    <string name="login_divider_method">ATAU</string>
    <string name="login_btn_facebook">Masuk dengan Facebook</string>
    <string name="login_btn_google">Masuk dengan Google</string>
    <string name="register_btn_facebook">Register dengan Facebook</string>
    <string name="register_btn_google">Register dengan Google</string>

    <string name="field_warning_empty">Silahkan masukkan email dan password Anda!</string>
    <string name="field_warning_email_invalid">Silahkan masukkan email valid Anda!</string>
    <string name="field_warning_name_empty">Silahkan masukkan nama lengkap Anda!</string>
    <string name="field_warning_wrong_password">Kombinasi email dan password salah!</string>
    <string name="field_warning_user_not_found">Anda belum terdaftar pada aplikasi</string>
    <string name="field_warning_account_already_registered">Anda sudah terdaftar, silahkan login dengan metode lain</string>
    <string name="field_warning_unknown_error">Terjadi eror, silahkan ulangi lagi</string>

    <string name="campaign_quote">Pilih, Lihat dan Mereka Terbantu!</string>
    <string name="campaign_terkumpul">Terkumpul</string>
    <string name="campaign_target">Target</string>
    <string name="campaign_pahlawan">pahlawan</string>
    <string name="campaign_donasi">free donation</string>
    <string name="campaign_duration">Sisa Hari</string>
    <string name="campaign_btn_donate">Donate</string>
    <string name="campaign_participation_label">Participation : </string>
    <string name="campaign_participation_value">%s donation</string>
    <string name="campaign_participation_placeholder">0 donation</string>

    <string name="confirmation_title">Selamat, Anda telah berdonasi!</string>
    <string name="confirmation_description_value">Anda adalah pahlawan yang telah berdonasi pada campaign \"%s\" \noleh %s</string>
    <string name="confirmation_share_value">Ayo sebarkan lebih luas!\n1 share = sekitar 12 donatur/pahlawan</string>

    <string name="detail_description">Deskripsi</string>
    <string name="detail_deep_link">Detail Campaign</string>

    <string name="pahlawan_subtitle">Mereka adalah pahlawan kebaikan.</string>
    <string name="pahlawan_lihat_profil">lihat profil di</string>
    <string name="pahlawan_campaign">campaign</string>

    <string name="profile_subtitle">\"Jadilah pahlawan hanya dengan melihat iklan pada \ncampaign dan kamu telah berdonasi untuk mereka!\"</string>
    <string name="profile_hello">Hai, Pahlawan!</string>
    <string name="profile_data_label">Pencapaian : </string>
    <string name="profile_data_bar">%s donasi  %s share</string>
    <string name="profile_data_placeholder">0 donasi  0 share</string>
    <string name="profile_value">(bernilai sekitar Rp. %s)</string>
    <string name="profile_value_placeholder">(bernilai sekitar Rp. 0)</string>
    <string name="profile_full_name">Full Name</string>
    <string name="profile_birthplace">Birthplace</string>
    <string name="profile_birthdate">Birthdate</string>
    <string name="profile_username">Username</string>
    <string name="profile_email">Email</string>
    <string name="profile_phone_number">Phone Number</string>
    <string name="profile_radio_male">Male</string>
    <string name="profile_radio_female">Female</string>
    <string name="profile_btn_update">Update</string>
    <string name="profile_link_facebook">Facebook Profile Link</string>
    <string name="profile_link_twitter">Twitter Profile Link</string>
    <string name="profile_link_instagram">Instagram Profile Link</string>
    <string name="profile_link">Link</string>
    <string name="profile_update_success">Profile updated successfully!</string>

    <string name="story_swipe_up">swipe up to see the detail</string>
    <string name="story_searching_ad">Mencari iklan&#8230;</string>
    
    <string name="about_first_paragraph">GotongRoyong adalah aplikasi berbasis android untuk menggalang dana untuk berdonasi secara online, transparan melalui iklan.</string>
    <string name="about_second_paragraph">Kami bekerjasama dengan pengiklanan dari perusahaan hingga para ukm dan bekerjasama dengan pada NGO atau yayasan sosial untuk menggalakkan dana pada kampanye sosial mereka.</string>
    <string name="about_third_paragraph">Jikak Anda menginginkan kerjasama, Silahkan menghubungi whatsapp / email kami.</string>
    <string name="about_contact_us">Hubungi Kami</string>

    <string name="test_result">Result : %s</string>
</resources>
