<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="192dp"
    android:background="@color/baseGray"
    android:padding="16dp"
    android:orientation="vertical"
    android:gravity="bottom">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drawer_hello"
        android:textSize="@dimen/drawer_xs"
        android:textStyle="italic"/>
    
    <TextView
        android:id="@+id/drawer_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/xs_padding"
        android:paddingBottom="@dimen/xs_padding"
        android:text="@string/load_retrieve"
        android:textSize="@dimen/drawer_lg"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/label_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_data_label"
        android:textSize="@dimen/drawer_xs"/>

    <TextView
        android:id="@+id/drawer_total_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/profile_data_placeholder"
        android:textSize="@dimen/drawer_xs"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/drawer_equivalent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_value_placeholder"
        android:textSize="@dimen/drawer_xs"
        android:textStyle="italic"/>
</LinearLayout>