<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themeOrange">

    <LinearLayout
        android:id="@+id/center_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/spinner_lg"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/lg_padding"
            android:paddingEnd="@dimen/lg_padding"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo_trim" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_subtitle"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@id/center_item"
        android:layout_marginTop="@dimen/lg_padding"
        android:text="@string/app_website"
        android:textColor="@android:color/white" />
</RelativeLayout>
